<resources>
    <string name="app_name">PNU Application</string>
    <string name="uplaude_certificate">Upload certificate and choose date</string>
    <string name="date">date</string>
    <string name="Add">Add</string>
    <string name="Add_Course_or_event">Add Course or event</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="location">Location</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="Credit_Hours">Credit Hours</string>
    <string name="Calendar">Calendar</string>
    <string name="Courses_certificates">Courses Certificates</string>
    <string name="Courses_and_Events">Courses and Events</string>
    <string name="Change_Password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="choose_password">choose password</string>
    <string name="repeat_password">New Password</string>
    <string name="has_at_least_8_characters">has at least 8 characters</string>
    <string name="has_at_least_1_number">has at least 1 number</string>
    <string name="Update">Update</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_req">Email Required</string>
    <string name="inv_email">Invalid email</string>
    <string name="pass_req">Password required</string>
    <string name="pass_to_short">Password too short</string>
    <string name="wait">Wait...</string>
    <string name="em_pas_not_correct">Email or password not correct</string>
    <string name="failed">Failed</string>
    <string name="user_not_found">User not found</string>
    <string name="about">About App</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="semester">Semester</string>
    <string name="first_semester">First semester</string>
    <string name="community">Community</string>
    <string name="collage">Collage</string>
    <string name="courses_and_events">Courses and events</string>
    <string name="announcements">Announcements</string>
    <string name="calendar">Calendar</string>
    <string name="attendance">Attendance</string>
    <string name="voting_results">Voting Results</string>
    <string name="important_phone">Important phone</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="language_setting">Language Settings</string>
    <string name="Suggestion">Suggestions</string>
    <string name="apointements">apointements</string>
    <string name="Home">Home</string>
    <string name="timline">TimeLine</string>
    <string name="skills_recod">skills record</string>
    <string name="Certificate">Certificates</string>
    <string name="Result_of_Voting">Result of Voting</string>
    <string name="Add_Suggest">Add Suggest</string>
    <string name="Vote_For_Clubs">Vote For Clubs</string>
    <string name="image">Images</string>
    <string name="Camera">Camera</string>
    <string name="Cancel">Cancel</string>
    <string name="Choose">Choose</string>
    <string name="img_failed">An error occurred when uploading the image</string>
    <string name="success">Added successfully</string>
    <string name="no_courses">No Courses To Show</string>
    <string name="pls_fill">Please fill data</string>
    <string name="no_certificates_to_show">No Certificates To Show</string>
    <string name="appointments">Appointments</string>
    <string name="no_votes_to_show">No Votes To Show</string>
    <string name="ch_image">Choose image</string>
    <string name="select">Select Image</string>
    <string name="view_student_profile">View student profile</string>
    <string name="send_certificate">Send Certificate</string>
    <string name="back">Back</string>
    <string name="view_profile">View Profile</string>
    <string name="send">Send</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="no_attendance_to_show">No Attendance To Show</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_pas_req">New Password Required</string>
    <string name="suc">Success</string>
    <string name="attend">Attend</string>
    <string name="choose_certificate">Choose Certificate</string>
    <string name="upload">Upload</string>
    <string name="skills_record_contents">skills record contents</string>
    <string name="attach_courses_or_skills">Attach Courses Or Skills</string>
    <string name="Hi_rahaf">You Must Acheive</string>
    <string name="name_of_course">Name of the skill or course</string>
    <string name="excuting_agency">The Excuting Agency</string>
    <string name="from_date">From Date</string>
    <string name="todate">To Date</string>
    <string name="number_of_hours">The Number Of Hours</string>
    <string name="submit">Submit</string>
    <string name="no_suggestions">No Suggestions</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>

    <string name="all">All</string>
    <string name="clubs">Clubs</string>
    <string name="join">Join</string>
    <string name="user_reserved_course">User already reserved this course</string>
    <string name="details">Details</string>
    <string name="available">Available</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details to show</string>
    <string-array name="course_category_array">
        <item>Category</item>
        <item>Clubs</item>
        <item>Collages</item>
    </string-array>
</resources>
