<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Add_Course_or_event"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:id="@+id/selectImageBtn"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"

                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_bg">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/camera_add" />
                </FrameLayout>


                <EditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/title"
                    android:padding="10dp" />



                <EditText
                    android:id="@+id/descET"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/description"
                    android:padding="10dp"
                    android:gravity="top"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg"

                    >
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        />
                </FrameLayout>

                <EditText
                    android:id="@+id/dateET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/priceET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/price"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    />

                <EditText
                    android:id="@+id/locationET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/location"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/numberET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/number_of_seats"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/ceditET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/Credit_Hours"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    />


                <Button
                    android:id="@+id/sendBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/rounded_primary"
                    android:text="@string/Add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>





</FrameLayout>