<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:layoutDirection="ltr">

    <!--<view-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="#40000000"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Add_Suggest"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">





                <EditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/title"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/descET"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:hint="@string/description"
                    android:padding="10dp" />








                <Button
                    android:id="@+id/sendBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="100dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Add"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?android:colorAccent"
        android:indeterminateTintMode="src_in"
        android:visibility="gone" />


</FrameLayout>