<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.Toolbar>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/toolBar"
                app:layout_constraintBottom_toTopOf="@id/fl"

                />
            <FrameLayout
                android:id="@+id/fl"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/grey2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/upload_certificate"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        >
                        <LinearLayout
                            android:id="@+id/llChooseImage"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:background="@drawable/small_round_white"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            >
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:src="@drawable/ic_upload"
                                android:padding="5dp"
                                android:clickable="false"
                                android:longClickable="false"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/grey5"
                                android:textSize="14sp"
                                android:text="@string/choose_certificate"
                                android:clickable="false"
                                android:longClickable="false"
                                />
                        </LinearLayout>
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imageCertificate"
                            android:layout_width="60dp"
                            android:layout_height="70dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            app:riv_corner_radius="8dp"
                            app:riv_border_width="0dp"
                            app:riv_mutate_background="true"
                            android:background="@color/grey3"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/upload"
                        android:visibility="gone"

                        />
                </LinearLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"

            />

        <TextView
            android:id="@+id/tvNoAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_attendance_to_show"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

    </FrameLayout>

</layout>

