<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/back"
            />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/login"
                android:scaleType="fitXY"/>


            <LinearLayout
                android:id="@+id/llView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintBottom_toBottomOf="@id/image"
                android:padding="8dp"
                android:background="@drawable/rounded_primary"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_sheet"
                    android:padding="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/send_certificate"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llView"
                android:layout_margin="20dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:background="@drawable/rounded_bg"
                    android:gravity="center_vertical"
                    android:onClick="checkReadPermission"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_upload"
                        android:padding="2dp"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/upload_certificate"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:hintEnabled="false"
                    android:background="@drawable/rounded_bg"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/black"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"

                    >
                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:hint="@string/email"
                        android:textSize="14sp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColorHint="@color/grey4"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_primary_btn"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:text="@string/send"
                    android:layout_marginBottom="20dp"
                    android:onClick="sendCertificate"
                    />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageCertificate"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    app:riv_mutate_background="true"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="8dp"
                    android:background="@color/grey2"
                    android:layout_marginBottom="20dp"

                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>
